<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/linear_layout_search"
    android:orientation="vertical"
    >

    <include
        layout="@layout/edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraint_layout_begin_date"
            android:layout_width="wrap_content"
            android:layout_height="59dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/text_view_begin_set_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#020101"
                app:layout_constraintBottom_toTopOf="@+id/view_begin"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/imageView_begin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_triangle"
                app:layout_constraintBottom_toTopOf="@+id/view_begin"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/text_view_begin_date"
                android:layout_width="68dp"
                android:layout_height="23dp"
                android:text="@string/begin_date"
                app:layout_constraintStart_toStartOf="@+id/text_view_begin_set_text"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view_begin"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_begin_date" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraint_layout_end_date"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1">


            <TextView
                android:id="@+id/text_view_end_set_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#020101"
                app:layout_constraintBottom_toTopOf="@+id/view_end"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/image_view_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_triangle"
                app:layout_constraintBottom_toTopOf="@+id/view_end"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/text_view_end_date"
                android:layout_width="68dp"
                android:layout_height="23dp"
                android:text="@string/end_date"
                app:layout_constraintStart_toStartOf="@+id/text_view_end_set_text"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view_end"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_end_date" />

        </android.support.constraint.ConstraintLayout>

    </LinearLayout>

    <include
        layout="@layout/categories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/search_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/search_button"
        android:textColor="@color/white"
        android:background="@color/lightBlueColor"
        android:layout_marginTop="30dp"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginEnd="18dp"
        />


</LinearLayout>