<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_activity_main_search"
        android:icon="@drawable/baseline_search_white_24px"
        app:showAsAction="ifRoom"
        android:title="Rechercher">
    </item>
    <item
        android:id="@+id/menu_activity_main_params"
        android:icon="@drawable/baseline_more_vert_white_24px"
        app:showAsAction="ifRoom"
        android:title="Paramètres">
    </item>
</menu>