<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frame_layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

   <include
      layout="@layout/toolbar"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
      />

   <android.support.design.widget.TabLayout
       android:id="@+id/activity_main_tabs"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:background="@color/lightBlueColor"
       app:tabIndicatorColor="@color/colorAccent"
       app:tabTextColor="@color/colorAccent"
       app:tabSelectedTextColor="@color/colorAccent"
       app:tabPaddingStart="-1dp"
       app:tabPaddingEnd="-1dp"/>

   <android.support.v4.view.ViewPager
       android:id="@+id/activity_main_viewpager"
       android:layout_width="match_parent"
       android:layout_height="match_parent"/>
   </LinearLayout>

