...
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:orientation="vertical">


        <CheckBox
            android:id="@+id/checkBox_arts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:buttonTint="@color/lightBlueColor"
            android:padding="7dp"
            android:text="@string/category_arts"
            android:textStyle="normal"
            />

        <CheckBox
            android:id="@+id/checkBox_business"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:buttonTint="@color/lightBlueColor"
            android:padding="7dp"
            android:text="@string/category_business"
...
